[package]
name = "strictly-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salsa = { path = "../salsa" }
strictly-ir = { path = "../strictly-ir" }
strictly-parse = { path = "../strictly-parse" }
strictly-compile = { path = "../strictly-compile" }
